[gd_scene load_steps=7 format=3 uid="uid://dpcatanvke6eq"]

[ext_resource type="Script" path="res://project_examples/astar_maze_comparison/astar_maze_comparison.gd" id="1_pihd3"]
[ext_resource type="Texture2D" uid="uid://byhpoem2rf2vx" path="res://project_examples/assets/simple_maze_sprites.png" id="2_3ahsc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kff6b"]
texture = ExtResource("2_3ahsc")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_q5ade"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_kff6b")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xr0pb"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.176471, 0.176471, 0.176471, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_gwop5"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_xr0pb")

[node name="AStarMazeComparison" type="Node"]
script = ExtResource("1_pihd3")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(20, 20)
tile_set = SubResource("TileSet_q5ade")
format = 2
layer_0/name = "Main"
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 65536, 65536, 0, 131072, 65536, 0, 196608, 65536, 0, 262144, 65536, 0, 327680, 65536, 0, 393216, 65536, 0, 458752, 65536, 0, 524288, 65536, 0, 589824, 65536, 0, 589825, 65536, 0, 589826, 65536, 0, 589827, 65536, 0, 589828, 65536, 0, 589829, 65536, 0, 589830, 65536, 0, 589831, 65536, 0, 589832, 65536, 0, 524296, 65536, 0, 458760, 65536, 0, 393224, 65536, 0, 327688, 65536, 0, 262152, 65536, 0, 589833, 65536, 0, 524297, 65536, 0, 458761, 65536, 0, 393225, 65536, 0, 327689, 65536, 0, 262153, 65536, 0, 196617, 65536, 0, 131081, 65536, 0, 65545, 65536, 0, 9, 65536, 0, 8, 65536, 0, 7, 65536, 0, 6, 65536, 0, 5, 65536, 0, 4, 65536, 0, 65540, 65536, 0, 65539, 65536, 0, 65538, 65536, 0, 2, 65536, 0, 1, 65536, 0, 3, 65536, 0, 65537, 65536, 0, 131073, 65536, 0, 196609, 65536, 0, 262145, 65536, 0, 327681, 65536, 0, 393218, 65536, 0, 458754, 65536, 0, 524290, 65536, 0, 524289, 65536, 0, 458753, 65536, 0, 393217, 65536, 0, 327682, 65536, 0, 262146, 65536, 0, 196610, 65536, 0, 131074, 65536, 0, 524291, 65536, 0, 458756, 65536, 0, 393220, 65536, 0, 327684, 65536, 0, 262148, 65536, 0, 262147, 65536, 0, 196611, 65536, 0, 131075, 65536, 0, 458755, 65536, 0, 393221, 65536, 0, 327685, 65536, 0, 196612, 65536, 0, 131076, 65536, 0, 327683, 65536, 0, 393219, 65536, 0, 524292, 65536, 0, 524293, 65536, 0, 458757, 65536, 0, 458758, 65536, 0, 458759, 65536, 0, 393223, 65536, 0, 327687, 65536, 0, 327686, 65536, 0, 393222, 65536, 0, 524294, 65536, 0, 524295, 65536, 0, 262150, 65536, 0, 262149, 65536, 0, 196613, 65536, 0, 131077, 65536, 0, 65541, 65536, 0, 65542, 65536, 0, 131078, 65536, 0, 196614, 65536, 0, 262151, 65536, 0, 196615, 65536, 0, 131079, 65536, 0, 65543, 65536, 0, 131080, 65536, 0, 196616, 65536, 0, 65544, 65536, 0, 655360, 65536, 0, 655361, 65536, 0, 655362, 65536, 0, 655363, 65536, 0, 655364, 65536, 0, 655365, 65536, 0, 655366, 65536, 0, 655367, 65536, 0, 655368, 65536, 0, 655369, 65536, 0, 655370, 65536, 0, 589834, 65536, 0, 524298, 65536, 0, 458762, 65536, 0, 393226, 65536, 0, 327690, 65536, 0, 262154, 65536, 0, 196618, 65536, 0, 131082, 65536, 0, 65546, 65536, 0, 10, 65536, 0, 720896, 65536, 0, 786432, 65536, 0, 851968, 65536, 0, 917504, 65536, 0, 983040, 65536, 0, 1048576, 65536, 0, 1114112, 65536, 0, 1179648, 65536, 0, 720897, 65536, 0, 786433, 65536, 0, 851969, 65536, 0, 917505, 65536, 0, 983041, 65536, 0, 1048577, 65536, 0, 1114113, 65536, 0, 1179649, 65536, 0, 720898, 65536, 0, 786434, 65536, 0, 851970, 65536, 0, 917506, 65536, 0, 983042, 65536, 0, 1048578, 65536, 0, 1114114, 65536, 0, 1179650, 65536, 0, 720899, 65536, 0, 786435, 65536, 0, 851971, 65536, 0, 917507, 65536, 0, 983043, 65536, 0, 1048579, 65536, 0, 1114115, 65536, 0, 1179651, 65536, 0, 720900, 65536, 0, 786436, 65536, 0, 851972, 65536, 0, 917508, 65536, 0, 983044, 65536, 0, 1048580, 65536, 0, 1114116, 65536, 0, 1179652, 65536, 0, 720901, 65536, 0, 786437, 65536, 0, 851973, 65536, 0, 917509, 65536, 0, 983045, 65536, 0, 1048581, 65536, 0, 1114117, 65536, 0, 1179653, 65536, 0, 720902, 65536, 0, 786438, 65536, 0, 851974, 65536, 0, 917510, 65536, 0, 983046, 65536, 0, 1048582, 65536, 0, 1114118, 65536, 0, 1179654, 65536, 0, 720903, 65536, 0, 786439, 65536, 0, 851975, 65536, 0, 917511, 65536, 0, 983047, 65536, 0, 1048583, 65536, 0, 1114119, 65536, 0, 1179655, 65536, 0, 720904, 65536, 0, 786440, 65536, 0, 851976, 65536, 0, 917512, 65536, 0, 983048, 65536, 0, 1048584, 65536, 0, 1114120, 65536, 0, 1179656, 65536, 0, 720905, 65536, 0, 786441, 65536, 0, 851977, 65536, 0, 917513, 65536, 0, 983049, 65536, 0, 1048585, 65536, 0, 1114121, 65536, 0, 1179657, 65536, 0, 720906, 65536, 0, 786442, 65536, 0, 851978, 65536, 0, 917514, 65536, 0, 983050, 65536, 0, 1048586, 65536, 0, 1114122, 65536, 0, 1179658, 65536, 0, 11, 65536, 0, 65547, 65536, 0, 131083, 65536, 0, 196619, 65536, 0, 262155, 65536, 0, 327691, 65536, 0, 393227, 65536, 0, 458763, 65536, 0, 524299, 65536, 0, 589835, 65536, 0, 655371, 65536, 0, 720907, 65536, 0, 786443, 65536, 0, 851979, 65536, 0, 917515, 65536, 0, 983051, 65536, 0, 1048587, 65536, 0, 1114123, 65536, 0, 1179659, 65536, 0, 12, 65536, 0, 65548, 65536, 0, 131084, 65536, 0, 196620, 65536, 0, 262156, 65536, 0, 327692, 65536, 0, 393228, 65536, 0, 458764, 65536, 0, 524300, 65536, 0, 589836, 65536, 0, 655372, 65536, 0, 720908, 65536, 0, 786444, 65536, 0, 851980, 65536, 0, 917516, 65536, 0, 983052, 65536, 0, 1048588, 65536, 0, 1114124, 65536, 0, 1179660, 65536, 0, 13, 65536, 0, 65549, 65536, 0, 131085, 65536, 0, 196621, 65536, 0, 262157, 65536, 0, 327693, 65536, 0, 393229, 65536, 0, 458765, 65536, 0, 524301, 65536, 0, 589837, 65536, 0, 655373, 65536, 0, 720909, 65536, 0, 786445, 65536, 0, 851981, 65536, 0, 917517, 65536, 0, 983053, 65536, 0, 1048589, 65536, 0, 1114125, 65536, 0, 1179661, 65536, 0, 14, 65536, 0, 65550, 65536, 0, 131086, 65536, 0, 196622, 65536, 0, 262158, 65536, 0, 327694, 65536, 0, 393230, 65536, 0, 458766, 65536, 0, 524302, 65536, 0, 589838, 65536, 0, 655374, 65536, 0, 720910, 65536, 0, 786446, 65536, 0, 851982, 65536, 0, 917518, 65536, 0, 983054, 65536, 0, 1048590, 65536, 0, 1114126, 65536, 0, 1179662, 65536, 0, 15, 65536, 0, 65551, 65536, 0, 131087, 65536, 0, 196623, 65536, 0, 262159, 65536, 0, 327695, 65536, 0, 393231, 65536, 0, 458767, 65536, 0, 524303, 65536, 0, 589839, 65536, 0, 655375, 65536, 0, 720911, 65536, 0, 786447, 65536, 0, 851983, 65536, 0, 917519, 65536, 0, 983055, 65536, 0, 1048591, 65536, 0, 1114127, 65536, 0, 1179663, 65536, 0, 16, 65536, 0, 65552, 65536, 0, 131088, 65536, 0, 196624, 65536, 0, 262160, 65536, 0, 327696, 65536, 0, 393232, 65536, 0, 458768, 65536, 0, 524304, 65536, 0, 589840, 65536, 0, 655376, 65536, 0, 720912, 65536, 0, 786448, 65536, 0, 851984, 65536, 0, 917520, 65536, 0, 983056, 65536, 0, 1048592, 65536, 0, 1114128, 65536, 0, 1179664, 65536, 0, 17, 65536, 0, 65553, 65536, 0, 131089, 65536, 0, 196625, 65536, 0, 262161, 65536, 0, 327697, 65536, 0, 393233, 65536, 0, 458769, 65536, 0, 524305, 65536, 0, 589841, 65536, 0, 655377, 65536, 0, 720913, 65536, 0, 786449, 65536, 0, 851985, 65536, 0, 917521, 65536, 0, 983057, 65536, 0, 1048593, 65536, 0, 1114129, 65536, 0, 1179665, 65536, 0, 18, 65536, 0, 65554, 65536, 0, 131090, 65536, 0, 196626, 65536, 0, 262162, 65536, 0, 327698, 65536, 0, 393234, 65536, 0, 458770, 65536, 0, 524306, 65536, 0, 589842, 65536, 0, 655378, 65536, 0, 720914, 65536, 0, 786450, 65536, 0, 851986, 65536, 0, 917522, 65536, 0, 983058, 65536, 0, 1048594, 65536, 0, 1114130, 65536, 0, 1179666, 65536, 0)
layer_1/name = "Path"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Points"
layer_2/tile_data = PackedInt32Array()

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.742
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_gwop5")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Step1Container" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Step1Container"]
layout_mode = 2

[node name="Step1Label" type="Label" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer"]
layout_mode = 2
text = "Step 1: Maze Generation"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer"]
layout_mode = 2

[node name="SeedContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer"]
layout_mode = 2

[node name="SeedInput" type="SpinBox" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer/SeedContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
prefix = "Seed:"

[node name="RandomSeedButton" type="Button" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer/SeedContainer"]
layout_mode = 2
text = "Random"

[node name="DimensionsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer"]
layout_mode = 2

[node name="WidthInput" type="SpinBox" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer/DimensionsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 150.0
value = 1.0
prefix = "Width:"

[node name="HeightInput" type="SpinBox" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer/DimensionsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 150.0
value = 1.0
prefix = "Height:"

[node name="GenerateMazeButton" type="Button" parent="MarginContainer/VBoxContainer/Step1Container/VBoxContainer"]
layout_mode = 2
text = "Generate Maze"

[node name="Step2Container" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Step2Container"]
layout_mode = 2

[node name="Step2Label" type="Label" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer"]
layout_mode = 2
text = "Step 2: Set Start and End Points"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer"]
layout_mode = 2

[node name="StartPosContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer"]
layout_mode = 2

[node name="StartPosTitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer/StartPosContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start Position:"

[node name="StartPosCoordsLabel" type="Label" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer/StartPosContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "(0, 0)"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer"]
layout_mode = 2

[node name="EndPosContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer"]
layout_mode = 2

[node name="EndPosTitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer/EndPosContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "End Positions:"

[node name="EndPosListContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer/EndPosContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="EndPosListLabel" type="Label" parent="MarginContainer/VBoxContainer/Step2Container/VBoxContainer/EndPosContainer/EndPosListContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "(0, 0)
(3, 4)
(43, 21)
(99. 100)
(20, 2)"

[node name="Step3Container" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Step3Container"]
layout_mode = 2

[node name="Step3Label" type="Label" parent="MarginContainer/VBoxContainer/Step3Container/VBoxContainer"]
layout_mode = 2
text = "Step 3: Solve w/DijkstraMap and AStar"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/Step3Container/VBoxContainer"]
layout_mode = 2

[node name="UseGridMethodsButton" type="CheckButton" parent="MarginContainer/VBoxContainer/Step3Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Use Grid Methods"

[node name="SolveMazeButton" type="Button" parent="MarginContainer/VBoxContainer/Step3Container/VBoxContainer"]
layout_mode = 2
text = "Solve Maze"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ResultsLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Results"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="BlankLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="DijkstraMapLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "DijkstraMap"
horizontal_alignment = 1

[node name="AStarLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "AStar"
horizontal_alignment = 1

[node name="GraphSetupTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Graph Setup"
horizontal_alignment = 2

[node name="DijkstraGraphSetupTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0ms"
horizontal_alignment = 1

[node name="AStarGraphSetupTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0ms"
horizontal_alignment = 1

[node name="SolveStepTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Solve Step"
horizontal_alignment = 2

[node name="DijkstraSolveStepTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0ms"
horizontal_alignment = 1

[node name="AStarSolveStepTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0ms"
horizontal_alignment = 1

[node name="TotalTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Total"
horizontal_alignment = 2

[node name="DijkstraTotalTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0ms"
horizontal_alignment = 1

[node name="AStarTotalTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0ms"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Step1Container/VBoxContainer/SeedContainer/RandomSeedButton" to="." method="_on_random_seed_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Step1Container/VBoxContainer/GenerateMazeButton" to="." method="generate_maze"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Step3Container/VBoxContainer/SolveMazeButton" to="." method="solve_maze"]
